# Carto-self

./: bug清单  carto-self 算法接口说明书  算法编写计划
carto-self/: CMakeLists.txt  package.xml
carto-self/common/: common.hpp
carto-self/config/: ProbabilityParams.yaml  ScanMatcherParams.yaml  SubMapGenerator2d.yaml  config.h.in
carto-self/data_structure/: LaserData.hpp
carto-self/include/common/: common.hpp
carto-self/include/pipeline/: data_processor_pipeline.hpp  displayer_pipeline.hpp  local_matcher_pipeline.hpp
carto-self/include/tools/deskewer/: deskwer.hpp
carto-self/include/tools/displayer/: displayer_pipeline.hpp
carto-self/include/tools/down_sampler/: down_sampler_interface.hpp  voxel_filter.hpp
carto-self/include/tools/io/: rosbag_io.hpp
carto-self/include/tools/pose_extrapolator/: linear_estimator.hpp  pose_extrapolator_interface.hpp
carto-self/include/tools/scan_matcher/: 2d_scan_matcher.hpp  ceres_scan_matcher.hpp  cost_function.hpp  costfunction.hpp
carto-self/include/tools/structure/: mapping_structure.hpp  matching_structure.hpp
carto-self/include/tools/submap_generator/: 2d_gridmap_generator.hpp
carto-self/src/node/: data_processor_node.cpp  local_matcher_node.cpp
carto-self/src/pipeline/: data_processor_pipeline.cpp  local_matcher_pipeline.cpp
carto-self/src/test/: common_test.cpp  grid_generator_test.cpp  linear_estimator_test.cpp  rosbag_io_test.cpp  scan_matcher_test.cpp
carto-self/src/tools/: 2d_gridmap_generator.cpp  2d_scan_matcher.cpp  linear_estimator.cpp  mapping_structure.cpp  voxel_filter.cpp
